Added project hero pictures and lightbox support

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 
   <main class="container">
 
+    <!-- HERO -->
     <section class="hero">
       <div class="hero-card">
-        <h1>Builds, diagnostics, and no-BS learning.</h1>
+        <h1>Builds, diagnostics, and DIY.</h1>
         <p>
           I document real restoration projects—from classic cars to jet skis—and break down the engine and tuning side
           in a way that actually makes sense.
@@ -40,15 +41,35 @@
       </div>
     </section>
 
+    <!-- FEATURED PROJECTS -->
     <section class="section">
       <h2>Featured Projects</h2>
       <p class="lead">Current builds and ongoing work. Click in for specs, progress, and videos.</p>
 
       <div class="grid">
+
         <a class="card" href="projects/camaro.html">
           <h3>1969 Camaro</h3>
           <p>Modern drivetrain + clean restoration with a focus on reliability and performance.</p>
           <div class="meta">Updates, parts list, and progress</div>
+        </a>
+
+        <a class="card" href="projects/72charger.html">
+          <h3>1972 Dodge Charger</h3>
+          <p>Classic Charger restoration with emphasis on structure, drivetrain, and long-term usability.</p>
+          <div class="meta">Hero photos and build progression</div>
+        </a>
+
+        <a class="card" href="projects/72chevelle.html">
+          <h3>1972 Chevelle</h3>
+          <p>Solid foundation build focused on mechanical reliability and clean execution.</p>
+          <div class="meta">Planning, teardown, and restoration notes</div>
+        </a>
+
+        <a class="card" href="projects/73charger.html">
+          <h3>1973 Dodge Charger</h3>
+          <p>Exploring structure, body condition, and future restoration direction.</p>
+          <div class="meta">Assessment and early-stage work</div>
         </a>
 
         <a class="card" href="projects/barracuda.html">
@@ -64,13 +85,15 @@
         </a>
 
         <a class="card" href="projects/jetskis.html">
-          <h3>Kawasaki Jet Skis (ECU + tuning)</h3>
+          <h3>Kawasaki Jet Skis (ECU + Tuning)</h3>
           <p>Diagnostics, ECU reverse engineering, CAN/K-Line work, and tuning experiments.</p>
           <div class="meta">Tools, wiring, logs, and how-to</div>
         </a>
+
       </div>
     </section>
 
+    <!-- LEARN -->
     <section class="section">
       <h2>Learn Engines & Tuning</h2>
       <p class="lead">
@@ -90,6 +113,7 @@
       </div>
     </section>
 
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-row">
         <div>© <span id="year"></span> Rowland Restorations</div>
