--- a/projects/72charger.html
+++ b/projects/72charger.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>1973 Dodge Challenger | Rowland Restorations</title>
+  <title>1972 Dodge Charger | Rowland Restorations</title>
   <link rel="stylesheet" href="../assets/css/styles.css" />
 </head>
 
@@ -29,18 +29,18 @@
   <main class="page">
     <div class="container">
       <section class="panel">
-        <h1 style="margin-top:0;">1973 Dodge Challenger</h1>
+        <h1 style="margin-top:0;">1972 Dodge Charger</h1>
         <p style="color:var(--muted); margin-top:6px; max-width:70ch;">
-          Hero photos for the project. Click the main image (or any thumbnail) to open the lightbox.
+          Hero photos for the project. Click the main image or any thumbnail to view full-size.
         </p>
 
         <!-- HERO GRID -->
         <div class="hero-block" style="margin-top:18px;">
-          <!-- Main image (click opens lightbox) -->
-          <div class="hero-main" data-index="0">
+          <!-- Main image -->
+          <div class="hero-main" data-index="8">
             <img
-              src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_001.jpeg"
-              alt="1973 Dodge Challenger hero image 1"
+              src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_009.jpeg"
+              alt="1972 Dodge Charger hero image"
               loading="eager"
             />
           </div>
@@ -48,47 +48,45 @@
           <!-- Thumbnails -->
           <div class="hero-thumbs">
             <div class="hero-thumb" data-index="0">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_001.jpeg" alt="1973 Challenger thumbnail 1" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_001.jpeg" alt="1972 Charger thumbnail 1" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="1">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_002.jpeg" alt="1973 Challenger thumbnail 2" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_002.jpeg" alt="1972 Charger thumbnail 2" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="2">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_003.jpeg" alt="1973 Challenger thumbnail 3" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_003.jpeg" alt="1972 Charger thumbnail 3" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="3">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_004.jpeg" alt="1973 Challenger thumbnail 4" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_004.jpeg" alt="1972 Charger thumbnail 4" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="4">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_005.jpeg" alt="1973 Challenger thumbnail 5" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_005.jpeg" alt="1972 Charger thumbnail 5" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="5">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_006.jpeg" alt="1973 Challenger thumbnail 6" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_006.jpeg" alt="1972 Charger thumbnail 6" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="6">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_007.jpeg" alt="1973 Challenger thumbnail 7" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_007.jpeg" alt="1972 Charger thumbnail 7" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="7">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_008.jpeg" alt="1973 Challenger thumbnail 8" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_008.jpeg" alt="1972 Charger thumbnail 8" loading="lazy" />
             </div>
 
             <div class="hero-thumb" data-index="8">
-              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_009.jpeg" alt="1973 Challenger thumbnail 9" loading="lazy" />
+              <img src="https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_009.jpeg" alt="1972 Charger thumbnail 9" loading="lazy" />
             </div>
           </div>
 
-          <!-- Optional next step link (you can wire this later) -->
+          <!-- Navigation -->
           <div style="margin-top:18px;">
             <a class="btn" href="../projects/index.html">← Back to Projects</a>
-            <!-- Later you can link to a full gallery page -->
-            <!-- <a class="btn primary" href="#">View Full Gallery</a> -->
           </div>
         </div>
       </section>
@@ -119,20 +117,18 @@
   </div>
 
   <script>
-    // Footer year
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Hero images list (make sure these match your Supabase filenames)
     const HERO_IMAGES = [
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_001.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_002.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_003.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_004.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_005.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_006.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_007.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_008.jpeg",
-      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1973-challenger/hero/1973challenger_009.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_001.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_002.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_003.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_004.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_005.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_006.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_007.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_008.jpeg",
+      "https://vegemuaddgrumtftxwzv.supabase.co/storage/v1/object/public/projects/1972-charger/hero/1972charger_009.jpeg"
     ];
 
     const lightbox = document.getElementById("lightbox");
@@ -148,18 +144,14 @@
     function openLightbox(index) {
       currentIndex = index;
       lbImg.src = HERO_IMAGES[currentIndex];
-      lbImg.alt = `1973 Dodge Challenger hero image ${currentIndex + 1}`;
       lbCaption.textContent = `Photo ${currentIndex + 1} of ${HERO_IMAGES.length}`;
-
       lightbox.classList.add("is-open");
       document.body.classList.add("no-scroll");
-      lightbox.setAttribute("aria-hidden", "false");
     }
 
     function closeLightbox() {
       lightbox.classList.remove("is-open");
       document.body.classList.remove("no-scroll");
-      lightbox.setAttribute("aria-hidden", "true");
       lbImg.src = "";
     }
 
@@ -173,24 +165,19 @@
       openLightbox(currentIndex);
     }
 
-    // Click main image + thumbnails
     document.querySelectorAll(".hero-main, .hero-thumb").forEach(el => {
       el.addEventListener("click", () => {
-        const idx = Number(el.getAttribute("data-index")) || 0;
-        openLightbox(idx);
+        openLightbox(Number(el.dataset.index));
       });
     });
 
-    // Controls
     lbBackdrop.addEventListener("click", closeLightbox);
     lbClose.addEventListener("click", closeLightbox);
-    lbPrev.addEventListener("click", (e) => { e.stopPropagation(); prevImage(); });
-    lbNext.addEventListener("click", (e) => { e.stopPropagation(); nextImage(); });
+    lbPrev.addEventListener("click", e => { e.stopPropagation(); prevImage(); });
+    lbNext.addEventListener("click", e => { e.stopPropagation(); nextImage(); });
 
-    // Keyboard
-    window.addEventListener("keydown", (e) => {
+    window.addEventListener("keydown", e => {
       if (!lightbox.classList.contains("is-open")) return;
-
       if (e.key === "Escape") closeLightbox();
       if (e.key === "ArrowLeft") prevImage();
       if (e.key === "ArrowRight") nextImage();
