--- a/index.html
+++ b/index.html
@@ -28,88 +28,127 @@
 
     <!-- HERO -->
     <section class="hero">
-      <div class="hero-card">
+      <div class="hero-card hero-center">
         <h1>Builds, diagnostics, and DIY.</h1>
         <p>
           I document real restoration projects—from classic cars to jet skis—and break down the engine and tuning side
           in a way that actually makes sense.
         </p>
-        <div class="btns">
+
+        <div class="btns hero-btns">
           <a class="btn primary" href="projects/index.html">View Projects</a>
-          <a class="btn" href="learn/getting-started.html">Start Learning</a>
+          <a class="btn" href="learn/index.html">Start Learning</a>
+          <a class="btn youtube" href="https://www.youtube.com/@rowlandrestorations" target="_blank" rel="noopener">
+            Watch on YouTube
+          </a>
+        </div>
+
+        <p class="hero-mini">
+          Real builds. Real wiring. Real tuning logs. No fluff.
+        </p>
+      </div>
+
+      <!-- Scroll reel of photos under hero -->
+      <div class="reel" aria-label="Recent work photo reel">
+        <div class="reel-track">
+          <img src="assets/images/home/reel1.jpg" alt="" loading="lazy" />
+          <img src="assets/images/home/reel2.jpg" alt="" loading="lazy" />
+          <img src="assets/images/home/reel3.jpg" alt="" loading="lazy" />
+          <img src="assets/images/home/reel4.jpg" alt="" loading="lazy" />
+          <img src="assets/images/home/reel5.jpg" alt="" loading="lazy" />
+          <img src="assets/images/home/reel6.jpg" alt="" loading="lazy" />
         </div>
       </div>
     </section>
 
-    <!-- FEATURED PROJECTS -->
+    <!-- YOUTUBE FEATURE (optional but recommended) -->
     <section class="section">
-      <h2>Featured Projects</h2>
-      <p class="lead">Current builds and ongoing work. Click in for specs, progress, and videos.</p>
+      <div class="section-head">
+        <h2>Latest on YouTube</h2>
+        <a class="section-link" href="https://www.youtube.com/@rowlandrestorations" target="_blank" rel="noopener">
+          Visit channel →
+        </a>
+      </div>
+      <p class="lead">Build updates, fabrication, diagnostics, and tuning breakdowns.</p>
 
-      <div class="grid">
+      <div class="grid video-grid">
+        <!-- Replace VIDEO_IDs with your actual YouTube video IDs -->
+        <div class="panel video-card">
+          <div class="video-embed">
+            <iframe
+              src="https://www.youtube.com/embed/ZyTOzjCmscc"
+              title="Rowland Restorations video"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+          <div class="video-meta">
+            <strong>Featured build video</strong>
+            <div class="muted">Barracuda episode.</div>
+          </div>
+        </div>
 
-        <a class="card" href="projects/camaro.html">
+        <div class="panel video-card">
+          <div class="video-embed">
+            <iframe
+              src="https://www.youtube.com/embed/VIDEO_ID_2"
+              title="Rowland Restorations video"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+          <div class="video-meta">
+            <strong>Diagnostics / tuning breakdown</strong>
+            <div class="muted">A second video that shows the ECU/technical side.</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="cta-row">
+        <a class="btn youtube" href="https://www.youtube.com/@rowlandrestorations" target="_blank" rel="noopener">
+          Subscribe / Watch More →
+        </a>
+      </div>
+    </section>
+
+    <!-- FEATURED PROJECTS (1–3 max) -->
+    <section class="section">
+      <div class="section-head">
+        <h2>Featured</h2>
+        <a class="section-link" href="projects/index.html">All projects →</a>
+      </div>
+      <p class="lead">The best starting points if you’re new here.</p>
+
+      <div class="grid featured-grid">
+        <a class="card featured-card" href="projects/camaro.html">
           <h3>1969 Camaro</h3>
-          <p>Modern drivetrain + clean restoration with a focus on reliability and performance.</p>
+          <p>Modern drivetrain + clean restoration focused on reliability and performance.</p>
           <div class="meta">Updates, parts list, and progress</div>
         </a>
 
-        <a class="card" href="projects/72charger.html">
-          <h3>1972 Dodge Charger</h3>
-          <p>Classic Charger restoration with emphasis on structure, drivetrain, and long-term usability.</p>
-          <div class="meta">Hero photos and build progression</div>
-        </a>
-
-        <a class="card" href="projects/72chevelle.html">
-          <h3>1972 Chevelle</h3>
-          <p>Solid foundation build focused on mechanical reliability and clean execution.</p>
-          <div class="meta">Planning, teardown, and restoration notes</div>
-        </a>
-
-        <a class="card" href="projects/73charger.html">
-          <h3>1973 Dodge Charger</h3>
-          <p>Exploring structure, body condition, and future restoration direction.</p>
-          <div class="meta">Assessment and early-stage work</div>
-        </a>
-
-        <a class="card" href="projects/barracuda.html">
+        <a class="card featured-card" href="projects/barracuda.html">
           <h3>1974 Plymouth Barracuda</h3>
           <p>Rust repair, structure, and bringing it back the right way—no shortcuts.</p>
           <div class="meta">Body work, fabrication, and build plan</div>
         </a>
 
-        <a class="card" href="projects/challenger.html">
-          <h3>1973 Dodge Challenger</h3>
-          <p>Full teardown and rebuild with a focus on clean metal and solid foundations.</p>
-          <div class="meta">Floor pans, welding, and restoration notes</div>
-        </a>
-
-        <a class="card" href="projects/jetskis.html">
+        <a class="card featured-card" href="projects/jetskis.html">
           <h3>Kawasaki Jet Skis (ECU + Tuning)</h3>
           <p>Diagnostics, ECU reverse engineering, CAN/K-Line work, and tuning experiments.</p>
           <div class="meta">Tools, wiring, logs, and how-to</div>
         </a>
-
       </div>
     </section>
 
-    <!-- LEARN -->
-    <section class="section">
-      <h2>Learn Engines & Tuning</h2>
-      <p class="lead">
-        If you’re starting from zero (or tired of vague answers), this is the guided path I wish I had.
-      </p>
-      <div class="grid">
-        <a class="card" href="learn/getting-started.html">
-          <h3>Getting Started</h3>
-          <p>What an ECU does, why sensors matter, and what “tuning” really means.</p>
-          <div class="meta">Best first read</div>
-        </a>
-        <a class="card" href="learn/engines.html">
-          <h3>Engines 101</h3>
-          <p>Air, fuel, spark, compression—how power happens and what can go wrong.</p>
-          <div class="meta">Core concepts</div>
-        </a>
+    <!-- DIY / LEARN (small blurb + link) -->
+    <section class="section diy">
+      <div class="diy-card">
+        <h2>DIY: Learn Engines & Tuning</h2>
+        <p class="lead">
+          Short, practical guides—built from the same problems I hit on real projects.
+          If you’re tired of vague answers, start here.
+        </p>
+        <a class="btn" href="learn/index.html">Go to Learn →</a>
       </div>
     </section>
 
