Added ambient highlight reel, improved homepage layout, added project gallery

--- a/index.html
+++ b/index.html
@@ -28,6 +28,35 @@
 
     <!-- HERO -->
     <section class="hero">
+
+      <!-- ✅ Ambient “photo film” background (non-clickable, behind hero-card) -->
+      <div class="hero-ambient" aria-hidden="true">
+        <div class="hero-ambient-track">
+          <img src="assets/images/home/camarogrille.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/camarotaillight.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/yz250.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/69mustang.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/73charger.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/camarobooth.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/shadow750.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/spark.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/stx15flake.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/stxdi.jpeg" alt="" loading="lazy" />
+
+          <!-- duplicate for seamless motion -->
+          <img src="assets/images/home/camarogrille.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/camarotaillight.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/yz250.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/69mustang.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/73charger.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/camarobooth.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/shadow750.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/spark.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/stx15flake.jpeg" alt="" loading="lazy" />
+          <img src="assets/images/home/stxdi.jpeg" alt="" loading="lazy" />
+        </div>
+      </div>
+
       <div class="hero-card hero-center">
         <h1>Builds, diagnostics, and DIY.</h1>
         <p>
@@ -47,18 +76,6 @@
           Real builds. Real wiring. Real tuning logs. No fluff.
         </p>
       </div>
-
-      <!-- Scroll reel of photos under hero -->
-      <div class="reel" aria-label="Recent work photo reel">
-        <div class="reel-track">
-          <img src="assets/images/home/reel1.jpg" alt="" loading="lazy" />
-          <img src="assets/images/home/reel2.jpg" alt="" loading="lazy" />
-          <img src="assets/images/home/reel3.jpg" alt="" loading="lazy" />
-          <img src="assets/images/home/reel4.jpg" alt="" loading="lazy" />
-          <img src="assets/images/home/reel5.jpg" alt="" loading="lazy" />
-          <img src="assets/images/home/reel6.jpg" alt="" loading="lazy" />
-        </div>
-      </div>
     </section>
 
     <!-- YOUTUBE FEATURE (optional but recommended) -->
@@ -72,7 +89,6 @@
       <p class="lead">Build updates, fabrication, diagnostics, and tuning breakdowns.</p>
 
       <div class="grid video-grid">
-        <!-- Replace VIDEO_IDs with your actual YouTube video IDs -->
         <div class="panel video-card">
           <div class="video-embed">
             <iframe
