Fixed gallery js

--- a/projects/gallery/camaro_gallery.html
+++ b/projects/gallery/camaro_gallery.html
@@ -60,7 +60,7 @@
 
         <!-- Bottom controls (natural after scrolling) -->
         <div class="gallery-footer">
-          <button class="btn" id="loadMoreBtn" type="button">Load more</button>
+          <button class="btn" id="loadMoreBtnBottom" type="button">Load more</button>
         </div>
       </section>
     </div>
